# flask-sample-project

./: Dockerfile  README.md  compose.yml  config.py  main.py  pyproject.toml
app/: __init__.py  config.py  models.py  services.py  views.py
app/routes/: address.py  auth.py  index.py  user.py
app/schemas/: address.py  token.py  user.py
app/templates/: base.html  index.html
migrations/versions/: 083fd7d9bf90_.py  2d486dc82d7d_added_disabled_column_at_user_model.py  34177b95ec6c_create_new_model_address.py
