[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["Kuriz15 <chrisbutalid@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
config = "^0.5.1"
python-dotenv = "^1.0.1"
black = "^24.4.1"
isort = "^5.13.2"
flask-migrate = "^4.0.7"
flask-restful = "^0.3.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
geopy = "^2.4.1"
flask-restx = "^1.3.0"
flask-jwt-extended = "^4.6.0"
flask-api = "^3.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
